# jep106

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  build.rs  package.json
.github/workflows/: ci.yml
src/: codes.json  codes.rs  lib.rs
tests/: print_nordic.rs  print_unknown.rs  print_version.rs
