[package]
name = "jep106"
version = "0.2.8"
authors = [
    "Noah Huesser <yatekii@yatekii.ch>",
    "Dominik Boehi <dominik.boehi@gmail.ch>",
]
edition = "2018"
description = "A pollable collection of all JEP106 manufacturer codes."
documentation = "https://docs.rs/jep106/"
homepage = "https://github.com/Yatekii/jep106"
repository = "https://github.com/Yatekii/jep106"
readme = "README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["jep106", "embedded"]
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
