[package]
name = "jep106"
version = "0.3.0"
authors = [
    "Noah Huesser <yatekii@yatekii.ch>",
    "Dominik Boehi <dominik.boehi@gmail.ch>",
]
edition = "2024"
description = "A pollable collection of all JEP106 manufacturer codes."
documentation = "https://docs.rs/jep106/"
homepage = "https://github.com/Yatekii/jep106"
repository = "https://github.com/Yatekii/jep106"
readme = "README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["jep106", "embedded"]
license = "MIT OR Apache-2.0"

[features]
default = ["std", "serde"]
std = []
serde = ["std", "dep:serde"]

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]
optional = true
